+ accessor & replacer for prob, GeomParameter are finally Defunct
+ liesInSupport gains an argument checkFin; in case of DiscreteDistributions, it tries to use 
  additional information from internal slot .finSupport, and e.g. if there is a lattice.  
+ liesInSupport now also is available for UnivarLebDecDistribution, LatticeDistribution, and UnivarMixingDistribution

under the hood:
+ DiscreteDistribution(s) gain a logical slot .finSupport to better control whether the 
  "true" support (not the possibly truncated one in slot support) is infinite (more precisely
  it is of length 2 -- first coordinate if the lower bound of the support is finite, second if 
  the upper bound is finite)
+ changed definition of q(DExp(..)) in initialize method in AllInitialize.R 
  from ifelse expressions to index operations  to avoid warnings 
+ in distr::solve only try base::solve if arg "a" has no dim or if it has then 
  if nrow(a)==nrow(b); otherwise directly use MASS::ginv

bug fixes
+ fixed a (newly introduced) bug in exp() for DiscreteDistribution -- forgot to return obj ...
  
##############
v 2.7
##############

user-visible CHANGES:
+ new Methods p.r and q.l, synonyma for p and q (useful for use in RStudio and 
  in Jupyter IRKernel)
+ more precise formulation of how to use calls to q() for RStudio
  and Jupyter IRKernel (i.e., use q.l)
+ switch from SweaveListingUtils to knitr in vignettes
+ replaced http://CRAN... by https://CRAN... (also in CITATION and similar files) 
+ updated address (Oldenburg) in several vignettes 
+ minor fix in doc to Arcsine distribution

under the hood:
+ wherever possible also use q.l internally instead of q to 
  provide functionality in IRKernel
+ registered native code 

bug fixes
+ fixed a bug in plot (q) for LebDec-Distributions (verticals were not plotted correctly)
+ panel selection mechanism had a bug for LebDec-Distributions 
+ fixed axis annotation: if xlab="" or ylab="" the respective lab are "" for all panels