@@ -1,7 +1,7 @@
 useDynLib(distr, .registration = TRUE, .fixes = "C_")
 import("methods")
 import("stats")
-importFrom("grDevices", "dev.list", "dev.new", "xy.coords")
+importFrom("grDevices", "dev.list", "dev.new", "xy.coords", "dev.off")
 importFrom("graphics", "plot", "abline", "layout", "legend", "lines", "mtext", "par", "points", "title")
 importFrom("MASS", "ginv")
 importFrom("utils", "str")
