@@ -6,9 +6,30 @@ if(getRversion()<'2.8.0'){
     }
 }else{
     devNew <- function(...){
-        if(length(dev.list())>0)
-           if(!is.null(getOption("newDevice"))) 
-               if(getOption("newDevice")) dev.new(...)
+        if(length(dev.list())>0){
+           if(!is.null(getOption("newDevice"))){
+               nrOpen <- length(grDevices::dev.list())
+               if(getOption("newDevice")==TRUE) {
+                  if(interactive()){
+                      while(nrOpen >20){
+                         invisible(readline(prompt=
+                         paste(gettext(
+                         "Too many open graphic devices; please shut some."),
+                         "\n", gettext(
+                         "When you have shut some devices, press [enter] to continue"),
+                         "\n", sep="")))
+                         nrOpen <- length(grDevices::dev.list())
+                      }
+                  }else{
+                      if(nrOpen >20){
+                         while(nrOpen<-length(grDevices::dev.list())>5)
+                             grDevices::dev.off(which=grDevices::dev.list()[2])
+                      }
+                  }
+               }
+               dev.new(...)
+           }
+        }
     }
 }
 options("newDevice"=FALSE)
